--- a/package.json
+++ b/package.json
@@ -1,22 +1,51 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
+    "ex-react-native-i18n": "^0.0.6",
     "expo": "~42.0.1",
+    "expo-font": "^9.2.1",
+    "expo-image-picker": "^10.2.2",
+    "expo-location": "^12.1.2",
+    "expo-permissions": "^12.1.1",
+    "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
+    "form-data": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native": "~0.63.4",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-confirmation-code-field": "^7.1.0",
+    "react-native-credit-card-input": "^0.4.1",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "^0.28.0",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
   },
-  "private": true
+  "private": true,
+  "name": "shopstore_expo",
+  "version": "1.0.0"
 }
